tests/baselines/reference/parserES5ForOfStatement21.errors.txt
parserES5ForOfStatement21.ts(1,9): error TS1123: Variable declaration list cannot be empty.


==== parserES5ForOfStatement21.ts (1 errors) ====
    for (var of of) { }
            
!!! error TS1123: Variable declaration list cannot be empty.